<resources>
    <string name="app_name">TimeTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="newProjectString">create new Project...</string>
    <string name="newAssign">create new Assignment...</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_user_name">Username</string>
    <string name="pref_default_user_name">Default</string>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_general_password">Password</string>
    <string name="pref_general_password_default">Default</string>
    <string name="pref_general_server_address">Server Address</string>
    <string name="pref_general_server_port">Server Port</string>
    <string name="title_activity_projects_view">Projects</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_projects_title">Projects</string>
    <string name="menu_assignments_title">Assignments</string>
    <string name="menu_times_title">Hours</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_accommodations_title">Accommodations</string>
    <string name="menu_flights_title">Flights</string>
    <string name="menu_additional_subsection_title">Additional</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_data_view">ProjectDataView</string>
    <string name="description_projectName">The name or short signature of the Project should be entered here.</string>
    <string name="ProjectDataNameDescriptor">Projectname</string>
    <string name="ProjectDataView_prefixEditModeTitle">Edit </string>
    <string name="PojectDataView_newProjectTitle">New Project</string>
    <string name="start_track_time_button">Start</string>
    <string name="title_activity_assignments">Assignments</string>
    <string name="dialog_property_message">Enter the key value Pair of the Project.</string>
    <string name="dialog_property_confirm_button">Save</string>
    <string name="dialog_property_cancel_button">Cancel</string>
    <string name="key_hint">Key</string>
    <string name="value_hint">Value</string>
    <string name="AssignmentView_makeCurrentButtonTitle">Make Current</string>
    <string name="title_activity_time_view">TimeView</string>
    <string name="breakCardHeader">Break</string>
    <string name="worktimecardHeader">Work</string>
    <string name="title_activity_time_add">TimeAddActivity</string>
    <string name="TMZ_UNKNOWN">Unkown time zone.</string>
    <string name="notification_channel_name">TimeNotification</string>
    <string name="notification_channel_description">Channel for notifying started time.</string>
    <string name="notification_title">Started Tracking Time....</string>
    <string name="notification_message">Current tracked Time:</string>
    <string name="notification_message_additional_line">Started @</string>

</resources>
