<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_user_name"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_user_name" />
    <EditTextPreference
        android:defaultValue="@string/pref_general_password_default"
        android:key="password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:password="true"
        android:title="@string/pref_general_password" />
    <EditTextPreference
        android:key="serveraddress"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_server_address" />
    <EditTextPreference
        android:key="serverport"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_server_port" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
