<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_light_green_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TimeTrackHome"
    tools:showIn="@layout/app_bar_time_track_home"
    android:orientation="vertical">

        <Spinner
            android:id="@+id/currentProject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/integrated_spinner_height"
            android:layout_margin="5dp"
            android:entries="@string/newProjectString"
            android:padding="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp" />


        <Spinner
            android:id="@+id/currentAssignment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/integrated_spinner_height"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:entries="@string/newAssign"
            android:padding="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="167dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <Button
        android:id="@+id/startStopBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/integrated_spinner_height"
        android:layout_weight="1"
        android:text="@string/start_track_time_button"
        android:theme="@android:style/Theme.Holo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="278dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8" />
</LinearLayout>